@@ -237,6 +237,9 @@ BUG FIXES
     o	Various memory leaks have been plugged and uses of strcpy()
 	with overlapping src and dest corrected.
 
+    o	R CMD INSTALL now also works for /bin/sh's such as the one from
+	Solaris 8 which fail when a function has the same name as a variable.
+
 
 
 		CHANGES IN R VERSION 1.9.1
